# trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_trainer.ps1  trainer.sh
src/icpc_trainer/: __init__.py  dummy_data.json  fsrs_logic.py  models.py  scraper.py  tui.py  workflow.py
